--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=News Website
 spring.profiles.active=secure
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Articles?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/NewsApp?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
 spring.datasource.password=root
