Finished owasp 6 - Vulnerable and outdatted components through actuator dependency version 3.0.12 which is vulnerable to ddos

--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.5.2</version>
@@ -78,6 +74,10 @@
 			<artifactId>docker-java-api</artifactId>
 			<version>3.3.6</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
@@ -119,6 +119,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+<!--			<version>3.0.12</version>-->
 		</dependency>
 	</dependencies>
 
