--- a/src/main/resources/application-insecure.properties
+++ b/src/main/resources/application-insecure.properties
@@ -1,7 +1,10 @@
 management.endpoints.web.base-path=/management
 
 # Expose only specific Actuator endpoints
-management.endpoints.web.exposure.include=env
+#management.endpoints.web.exposure.include=env
+
+management.endpoints.web.exposure.include=env,heapdump,metrics
+management.endpoint.health.show-details=always
 
 # Enable or disable specific Actuator endpoints
 management.endpoint.env.enabled=true
